# fujinet-go-adam

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adam_core.cpp  adam_host.c  session_runtime.cpp  session_runtime.h
app/src/main/cpp/adamem_android/: AdamemSDL.h  SDL.h  SDL_audio.h  SDL_stdinc.h  SDL_timer.h
app/src/main/java/com/mantismoonlabs/fujinetgoadam/: AudioOutput.kt  MainActivity.kt  MediaImport.kt  RuntimeInstaller.kt  SessionController.kt  Settings.kt
app/src/main/java/com/mantismoonlabs/fujinetgoadam/core/: EmulatorNative.kt
app/src/main/java/com/mantismoonlabs/fujinetgoadam/fujinet/: FujiNetWebViewActivity.kt
app/src/main/java/com/mantismoonlabs/fujinetgoadam/input/: AdamInput.kt
app/src/main/java/com/mantismoonlabs/fujinetgoadam/ui/: AdamKeyboard.kt  ControllerPad.kt  EmulatorScreen.kt  EmulatorSurface.kt  SettingsDialog.kt
app/src/main/java/com/mantismoonlabs/fujinetgoadam/ui/theme/: Theme.kt
app/src/main/java/online/fujinet/go/adam/: AudioOutput.kt  EmulatorSessionService.kt  MainActivity.kt  MediaImport.kt  RuntimeInstaller.kt  SessionController.kt  Settings.kt
app/src/main/java/online/fujinet/go/adam/core/: EmulatorNative.kt
app/src/main/java/online/fujinet/go/adam/fujinet/: FujiNetWebViewActivity.kt
app/src/main/java/online/fujinet/go/adam/input/: AdamInput.kt  GameControllerMapper.kt  HardwareKeyboard.kt
app/src/main/java/online/fujinet/go/adam/ui/: AdamKeyboard.kt  ControllerPad.kt  EmulatorScreen.kt  EmulatorSurface.kt  FujiHaptics.kt  JoystickPad.kt  SettingsDialog.kt
app/src/main/java/online/fujinet/go/adam/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/online/fujinet/go/adam/input/: AdamControllerTest.kt  HardwareKeyboardTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/adamem/: build-adamem-core.sh
tools/fujinet/: build-fujinet.sh
tools/fujinet/support/: fujinet_android_entry.cpp
